--- a/MedOnTime-WebApp/MedOnTime-WebApp/MedOnTime-WebApp.csproj
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/MedOnTime-WebApp.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.3" />
+    <PackageReference Include="MongoDB.Bson" Version="2.12.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.12.0" />
   </ItemGroup>
 
   <ItemGroup>
