--- a/MedOnTime-WebApp/MedOnTime-WebApp/appsettings.json
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb+srv://medontime:admin@medontime.fgmuf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+    "DatabaseName": "MedOnTimeDb"
+  }
 }
