--- a/MedOnTime-WebApp/MedOnTime-WebApp/appsettings.json
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/appsettings.json
@@ -7,8 +7,15 @@
     }
   },
   "AllowedHosts": "*",
-  "DatabaseSettings": {
-    "ConnectionString": "mongodb+srv://medontime:admin@medontime.fgmuf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+  //"DatabaseSettings": {
+  //  "ConnectionString": "mongodb+srv://medontime:admin@medontime.fgmuf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+  //  "DatabaseName": "MedOnTimeDb"
+  //},
+
+  
+    "ConnectionStrings": {
+      "MongoDb": "mongodb+srv://medontime:admin@medontime.fgmuf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+    },
     "DatabaseName": "MedOnTimeDb"
-  }
+  
 }
