--- a/.gitignore
+++ b/.gitignore
@@ -360,3 +360,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+MedOnTime-WebApp/MedOnTime-WebApp/wwwroot/lib/twitter-bootstrap/
