Cleared up unnecessary models

--- a/MedOnTime-WebApp/MedOnTime-WebApp/appsettings.json
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/appsettings.json
@@ -6,16 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  //"DatabaseSettings": {
-  //  "ConnectionString": "mongodb+srv://medontime:admin@medontime.fgmuf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
-  //  "DatabaseName": "MedOnTimeDb"
-  //},
-
-  
-    "ConnectionStrings": {
-      "MongoDb": "mongodb+srv://medontime:admin@medontime.fgmuf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
-    },
-    "DatabaseName": "MedOnTimeDb"
-  
+  "AllowedHosts": "*"
 }
