--- a/MedOnTime-WebApp/MedOnTime-WebApp/MedOnTime-WebApp.csproj
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/MedOnTime-WebApp.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="MongoDB.Bson" Version="2.12.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.0" />
+    <PackageReference Include="MongoDB.Driver.GridFS.signed" Version="2.11.2" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
