--- a/MedOnTime-WebApp/MedOnTime-WebApp/Properties/launchSettings.json
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Properties/launchSettings.json
@@ -25,6 +25,12 @@
       },
       "dotnetRunMessages": "true",
       "applicationUrl": "https://localhost:7000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
