--- a/MedOnTime-WebApp/MedOnTime-WebApp/MedOnTime-WebApp.csproj
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/MedOnTime-WebApp.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="MongoDB.Bson" Version="2.12.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.0" />
     <PackageReference Include="MongoDB.Driver.GridFS.signed" Version="2.11.2" />
+    <PackageReference Include="MongoDB.Libmongocrypt" Version="1.2.1" />
+    <PackageReference Include="MongoDB.Libmongocrypt.signed" Version="1.2.1.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
